# monarch-app

./: .gitignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  browserconfig.xml  dict1.py  index.html  mkdocs.yaml  objects.inv  pyproject.toml  robots.txt  sitemap.xml  test.py  tox.ini
.github/: pull_request_template.md
API-Reference/: index.html
API_Reference/: index.html
Data-Model/: index.html
assets/: _member-df740e3a.js  ada-health-be5ac9b4.js  animalqtldb-66d7b6a7.js  anne-thessen-771d0323.js  association-4e410068.js  association-c5100ddb.js  association-d204cca3.js  association-disease-to-phenotype-4009bcc9.js  association-disease-to-phenotype-5570a58f.js  association-disease-to-phenotype-ada105d5.js  association-gene-to-disease-1e7f8459.js  association-gene-to-disease-81b1bf95.js  association-gene-to-disease-cff34586.js  association-gene-to-phenotype-0f91c77f.js  association-gene-to-phenotype-3ff1eee8.js  association-gene-to-phenotype-c382813c.js  bgee-03652309.js  biogrid-a4711e65.js  bryan-laraway-aefb0194.js  category-anatomical-entity-21e703a9.js  category-anatomy-08047218.js  (+594 more)
backend/: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  example_biolink_sim_response.json  mkdocs.yaml  pyproject.toml  start_api.sh  test_multi_endpoint_1.json  test_multi_endpoint_2.json  test_multi_endpoint_3.json  test_multi_entity_endpoint.py  wait-for-it.sh
backend/monarch_api/: association.py  entity.py  model.py  semsim.py
backend/monarch_api/utils/: association.py  entity.py  get_similarity.py  helper.py  query.py
backend/src/monarch_api/: additional_models.py  association.py  config.py  entity.py  histopheno.py  main.py  model.py  search.py  semsim.py
backend/src/monarch_api/utils/: entity_utils.py
backend/src/monarch_py/: __init__.py  association_type_mappings.yaml  cli.py  solr_cli.py  sql_cli.py
backend/src/monarch_py/api/: additional_models.py  association.py  case_phenotype.py  config.py  entity.py  entity_grid.py  histopheno.py  infores.py  main.py  meta.py  model.py  oak_server.py  pathograph.py  search.py  semsim.py  sources_versions.py  text_annotation.py
backend/src/monarch_py/api/middleware/: gcloud_logging.py  logging_middleware.py
backend/src/monarch_py/api/templates/: meta.html
backend/src/monarch_py/api/utils/: entity_utils.py  get_similarity.py  get_text_annotations.py  similarity_utils.py
backend/src/monarch_py/datamodels/: category_enums.py  grid_configs.py  grid_groupings.py  model.py  model.yaml  monarch_kg_schema.yaml  similarity.yaml  solr.py
backend/src/monarch_py/implementations/oak/: annotation_utils.py  oak_implementation.py
backend/src/monarch_py/implementations/solr/: solr_implementation.py  solr_parsers.py  solr_query_utils.py
backend/src/monarch_py/implementations/spacy/: spacy_implementation.py  text_annoataion_utils.py
backend/src/monarch_py/implementations/sql/: sql_implementation.py
backend/src/monarch_py/interfaces/: association_interface.py  entity_interface.py  grounding_interface.py  mapping_interface.py  query_interface.py  search_interface.py  text_annotation_interface.py
backend/src/monarch_py/service/: curie_service.py  ducksim.py  ducksim_service.py  semsim_service.py  solr_service.py
backend/src/monarch_py/utils/: association_type_mappings.yaml  association_type_utils.py  case_phenotype_utils.py  cli_fields.py  entity_grid_utils.py  entity_utils.py  format_utils.py  solr_cli_utils.py  source_versions.py  utils.py
backend/tests/: conftest.py  test_association_flatter.py  test_fixtures.py  test_node_hierarchy.py  test_search.py  test_semsim.py
backend/tests/api/: test_api.py  test_association_flatter.py  test_association_router.py  test_entity_router.py  test_histopheno_router.py  test_infores_router.py  test_mapping_endpoint.py  test_meta.py  test_node_hierarchy.py  test_search.py  test_search_router.py  test_semsim.py  test_semsim_ducksim_api.py  test_semsim_router.py  test_text_annotation.py
backend/tests/fixtures/: association_counts.py  association_counts_query.py  association_counts_response.py  association_counts_results.py  association_query_direct.py  association_query_indirect.py  association_query_params.py  association_response.py  association_results.py  association_table.py  association_table_response.py  associations.py  associations_compact.py  autocomplete.py  autocomplete_query.py  autocomplete_response.py  autocomplete_results.py  compare.py  entity.py  entity_response.py  histopheno.py  histopheno_query.py  histopheno_response.py  histopheno_results.py  mapping_query.py  mapping_response.py  mappings.py  metadata.py  node-associations.py  node.py  node_associations.py  object_formatted.py  object_headers.py  phenotype_explorer_compare.py  phenotype_explorer_multi_compare.py  phenotype_explorer_search.py  search.py  search_query.py  search_response.py  search_results.py
backend/tests/integration/: test_case_phenotype_api.py  test_case_phenotype_performance.py  test_case_phenotype_solr.py  test_ground_endpoint.py  test_solr_association.py  test_solr_autocomplete.py  test_solr_entity.py  test_solr_grounding.py  test_solr_histopheno.py  test_solr_infores.py  test_solr_search.py  test_solr_search_ranking.py  test_spacy_implementation.py  test_sql_association.py  test_sql_entity.py
backend/tests/unit/: test_association_type_mapping.py  test_case_phenotype_api_unit.py  test_case_phenotype_builder.py  test_case_phenotype_models.py  test_case_phenotype_query.py  test_curie_service.py  test_datamodels_solr.py  test_ducksim.py  test_ducksim_invariants.py  test_entity_grid_api.py  test_entity_grid_utils.py  test_entity_utils.py  test_fixtures.py  test_grid_configs.py  test_grid_models.py  test_histopheno_bins.py  test_mock_solr.py  test_oak_semsim.py  test_oak_sim.py  test_pathograph_api.py  test_semsim_service.py  test_solr_entity_utils.py  test_solr_implementation.py  test_solr_parsers.py  test_solr_queries.py  test_solr_service.py  test_source_versions.py  test_sources_versions_api.py  test_utils.py
backend/tools/: bake_ducksim.py
(+1137 files in other folders)
