[tool.poetry]
name = "monarch-api"
version = "0.1.0"
description = "Monarch Initiative API"
authors = ["glass-ships <glass.ships@outlook.com>, kevin schaper <kevin@tislab.org>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
fastapi = "^0.87.0"
pysolr = "^3.9.0"
linkml = "^1.3.13"
pydantic = "^1.10.2"
monarch-py = "^0.1.0"
oaklib = "^0.1.53"
pytest = "^7.2.0"
tox = "^3.25.1"
click = "^8.1.3"
sphinx = {version = "^5.3.0", extras = ["docs"]}
sphinx-rtd-theme = {version = "^1.0.0", extras = ["docs"]}
sphinx-autodoc-typehints = {version = "^1.19.4", extras = ["docs"]}
sphinx-click = {version = "^4.3.0", extras = ["docs"]}
myst-parser = {version = "^0.18.1", extras = ["docs"]}
oakx-grape = "*"


[tool.poetry.dev-dependencies]
uvicorn = {extras = ["standard"], version = "^0.20.0"}

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.extras]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "sphinx-click",
    "myst-parser"
    ]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = true
reverse_relative = true