[tool.poetry]
name = "monarch-api"
version = "0.2.0"
description = "Monarch Initiative API"
authors = [
    "glass-ships <glass.ships@outlook.com>",
    "kevin schaper <kevin@tislab.org>",
    "The Monarch Initiative <info@monarchinitiative.org>"
]

packages = [
    { include = "monarch_api", from = "src"}
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
fastapi = "^0.87.0"
pysolr = "^3.9.0"
linkml = "^1.3.13"
pydantic = "^1.10.2"
monarch-py = "0.2.6"
oaklib = "^0.1.53"
oakx-grape = "^0.1.2"
pytest = "^7.2.0"
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.10"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
autoflake = "^1.7.7"
uvicorn = {extras = ["standard"], version = "^0.20.0"}

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.poetry.extras]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "sphinx-click",
    "myst-parser"
    ]

[tool.pytest.ini_options]
pythonpath = ["src"]
