# Once uv supports setting dynamic versions, replace the version line with:
# dynamic = ["version"]

[project]
name = "monarch-py"
version = "0.0.0"
description = "Python package for interacting with Monarch Initiative knowledge graph"
authors = [
    { name = "The Monarch Initiative", email = "info@monarchinitiative.org" },
    { name = "kevin schaper", email = "kevin@tislab.org" },
    { name = "glass-ships", email = "glass.ships@outlook.com" },
]

requires-python = ">=3.9, <4.0"

dependencies = [
    "pydantic>=2,<3",
    "curies<1",
    "linkml==1.8.3",
    # "prefixmaps~=0.2",
    "prefixmaps==0.2.4",
    "bioregistry~=0.10.57",
    "oaklib>=0.6.6",
    "docker>=7.1.0",
    "fastapi>=0.103.1,<1",
    "gunicorn>=22.0.0",
    "loguru",
    "pystow>=0.5.4",
    "requests>=2.31.0",
    "rich",
    "typer>=0.12.0",
    "beautifulsoup4>=4.12.3",
    "spacy>=3.7.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.23",
    "mkdocstrings[python]>=0.29.1",
    "black>=24.4.2",
    "ruff",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27",
    "scholarly",
    "coverage>=7.5.1",
]

[project.scripts]
monarch = "monarch_py.cli:app"
monarch-api = "monarch_py.api.main:run"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.pytest.ini_options]
pythonpath = [".", "src"]

[tool.ruff]
line-length = 120
ignore = [
    "F541", # f-strings with no placeholders
]
exclude = ["tests/fixtures/*.py", "src/monarch_py/datamodels/model.py"]
# per-file-ignores = {"" = ""}
