[tool.poetry]
name = "monarch-py"
version = "0.0.0"
description = "Python package for interacting with Monarch Initiative knowledge graph"
authors = [
    "glass-ships <glass.ships@outlook.com>",
    "kevin schaper <kevin@tislab.org>",
    "The Monarch Initiative <info@monarchinitiative.org>",
]


packages = [{ include = "monarch_py", from = "src" }]


[tool.poetry.dependencies]
### Core dependencies
python = "^3.9"
pydantic = "^2"
curies = "<1"
linkml = "1.8.3"
prefixmaps = "^0.2"
bioregistry = "^0.10.57"
oaklib = ">=0.6.6"

docker = "^7.1.0"
fastapi = "^0.103.1"
gunicorn = "^22.0.0"
loguru = "*"
pystow = ">=0.5.4"
requests = "^2.31.0"
rich = "*"
typer = "^0.12.0"
beautifulsoup4 = "^4.12.3"
spacy = "^3.7.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
mkdocs = ">=1.6.0"
mkdocs-material = ">=9.5.23"
mkdocstrings = { version = ">=0.25.1", extras = ["python"] }
black = "^24.4.2"
ruff = "*"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
httpx = "^0.27"
scholarly = "*"
coverage = "^7.5.1"


[tool.poetry.scripts]
monarch = "monarch_py.cli:app"
monarch-api = { callable = "monarch_py.api.main:run" }


[tool.ruff]
line-length = 120
ignore = [
    "F541", # f-strings with no placeholders
]
exclude = ["tests/fixtures/*.py", "src/monarch_py/datamodels/model.py"]
# per-file-ignores = {"" = ""}


[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"


[tool.poetry-dynamic-versioning]
enable = false
vcs = "git"
style = "pep440"


[tool.pytest.ini_options]
pythonpath = [".", "src"]
