# Once uv supports setting dynamic versions, replace the version line with:
# dynamic = ["version"]

[project]
name = "monarch-py"
version = "0.0.0"
description = "Python package for interacting with Monarch Initiative knowledge graph"
authors = [
    { name = "The Monarch Initiative", email = "info@monarchinitiative.org" },
    { name = "kevin schaper", email = "kevin@tislab.org" },
    { name = "glass-ships", email = "glass.ships@outlook.com" },
]

requires-python = ">=3.10, <4.0"

dependencies = [
    "beautifulsoup4>=4.13.4",
    "bioregistry~=0.10.57",
    "curies<1",
    "docker>=7.1.0",
    "fastapi>=0.115.12,<1",
    "gunicorn>=23.0.0",
    "jinja2>=3.0",
    "linkml==1.9.3",
    "loguru",
    "oaklib>=0.6.6",
    "prefixmaps==0.2.4",
    "pydantic>=2,<3",
    "pystow>=0.5.4",
    "requests>=2.31.0",
    "rich",
    "spacy>=3.8.7",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.23",
    "mkdocstrings[python]>=0.29.1",
    "black>=24.4.2",
    "ruff",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27",
    "scholarly",
    "coverage>=7.5.1",
]

[project.scripts]
monarch = "monarch_py.cli:app"
monarch-api = "monarch_py.api.main:run"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
fallback-version = "0.0.0"

[tool.pytest.ini_options]
pythonpath = [".", "src"]

[tool.ruff]
line-length = 120
exclude = ["tests/fixtures/*.py", "src/monarch_py/datamodels/model.py"]
# per-file-ignores = {"" = ""}

[tool.ruff.lint]
ignore = [
    "F541", # f-strings with no placeholders
]
exclude = ["tests/fixtures/*.py", "src/monarch_py/datamodels/model.py"]
# per-file-ignores = {"" = ""}
